PyMaker/datas/object2/RawHTML/i7001/Python_DOC_referPages.unicodeescape-error-when-importing-a-csv-file-in-python-3.txt
<div class="post-text" itemprop="text">
<p>It's a very basic question but I've tried many things. My last code is:</p>
<pre><code>import csv
with open ('C:\Users\Michel Spiero\Desktop\Base de dados para curso de Python/enrollments.csv') as csvfile:
    readCSV =csv.reader(csvfile, delimiter=',')

    for row in readCSV:
        print(row)
</code></pre>
<p>I am getting this error:</p>
<pre><code>File "&lt;ipython-input-9-3103e7dc9e55&gt;", line 3
    with open ('C:\Users\Michel Spiero\Desktop\Base de dados para curso de Python/enrollments.csv') as csvfile:
              ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
</code></pre>
<p>What Should I do?</p>
<p>Thanks</p>
</div>
<div class="post-text" itemprop="text">
<p>Backslash U (<code>\U</code>) has a special meaning in string literals. <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-and-bytes-literals" rel="nofollow noreferrer">String and Bytes literals</a> in the documentation says for <code>\Uxxxxxxxx</code> the meaning is <em>„Character with 32-bit hex value xxxxxxxx“</em>.</p>
<p>So you have to escape at least the backslash before the U of Users, or put an <code>r</code> in front of the string so no backslash has a special meaning.</p>
</div>
<span class="comment-copy">Try <a href="https://stackoverflow.com/a/19089210/2237916">stackoverflow.com/a/19089210/2237916</a> in order to check if is the problem with the encoding of the ipython you are using.</span>
<span class="comment-copy">Use a raw string <code>r'c:\Users\...'</code> if you have backslashes in your string, or use double backslashes to escape them, or use forward slashes.  The <code>\U</code> is the start of a Unicode escape sequence otherwise, as the error message says.</span>
<span class="comment-copy">Duplicate of <a href="https://stackoverflow.com/a/1347854/235698">stackoverflow.com/a/1347854/235698</a></span>
<span class="comment-copy">Possible duplicate of <a href="https://stackoverflow.com/questions/1347791/unicode-error-unicodeescape-codec-cant-decode-bytes-cannot-open-text-file">"Unicode Error "unicodeescape" codec can't decode bytes... Cannot open text files in Python 3</a></span>
